# storage-layout-extractor

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  performance.md  task.md
.github/workflows/: ci.yml
asset/: BatchEnsLookups.sol  BytecodeExample.json  BytecodeExample.sol  EIP1967Slot.sol  MerkleTree.sol  PackedEncodings.json  PackedEncodings.sol  ReplaceMeForTesting.json  ReplaceMeForTesting.sol  SimpleContract.sol  UniswapDebug.json  UniswapDebug.sol
docs/: CONTRIBUTING.md  Extending the Analyzer.md  Extending the Library.md
src/: constant.rs  contract.rs  error.rs  executor.rs  layout.rs  lib.rs  utility.rs  watchdog.rs
src/analyzer/: contract.rs  mod.rs  state.rs
src/analyzer/chain/: mod.rs  version.rs
src/data/: combine.rs  disjoint_set.rs  mod.rs  vector_map.rs
src/disassembly/: disassembler.rs  mod.rs
src/error/: container.rs  disassembly.rs  execution.rs  mod.rs  unification.rs
src/extractor/: contract.rs  mod.rs  state.rs
src/extractor/chain/: mod.rs  version.rs
src/inference/: abi.rs  debug.rs  expression.rs  mod.rs  state.rs  unification.rs
src/inference/lift/: dynamic_array_access.rs  mapping_access.rs  mapping_index.rs  mapping_offset.rs  mask_word.rs  mod.rs  mul_shifted.rs  packed_encoding.rs  proxy_slots.rs  recognise_hashed_slots.rs  storage_slots.rs  sub_word.rs
src/inference/rule/: arithmetic_operations.rs  bit_shifts.rs  boolean_operations.rs  call_data.rs  condition.rs  create.rs  dynamic_array_write.rs  environment_opcodes.rs  ext_code.rs  external_calls.rs  mapping_access.rs  masked_word.rs  mod.rs  offset_size.rs  packed_encoding.rs  s_load_is_element_type.rs  s_load_is_inner_types.rs  sha3.rs  shifted_has_element_type.rs  storage_key.rs  storage_write.rs
src/inference/unification/: correspondence.rs  data.rs  mod.rs
src/opcode/: arithmetic.rs  control.rs  environment.rs  logic.rs  macros.rs  memory.rs  mod.rs  util.rs
src/tc/: abi.rs  debug.rs  expression.rs  mod.rs  unification.rs
src/tc/lift/: dynamic_array_access.rs  mapping_index.rs  mapping_offset.rs  mod.rs  mul_shifted.rs  packed_encoding.rs  proxy_slots.rs  recognise_hashed_slots.rs  storage_slots.rs  sub_word.rs
src/tc/rule/: arithmetic_operations.rs  bit_shifts.rs  boolean_operations.rs  call_data.rs  create.rs  mod.rs  (+12 more)
src/unifier/: abi.rs  expression.rs  implication.rs  implication_set.rs  metavariable.rs  mod.rs  state.rs  types.rs  u256_wrapper.rs
src/vm/: data.rs  mod.rs  state.rs  thread.rs  vm_thread.rs
tests/: balancers_vault.rs  batch_ens_lookups_no_storage_opcodes.rs  cpu_friless_verifier.rs  crypto_kitties.rs  cryptoadz_chained_patch.rs  cryptoadz_custom_image_37b.rs  curve_v1_adapter_2_assets.rs  eip1967_slot.rs  enso_wallet.rs  house.rs  indelible.rs  kakigori.rs  manual_inspection.rs  merkle_tree_no_storage_opcodes.rs  mortgage_render.rs  packed_encodings.rs  paw_warz.rs  proxy_slot_pattern_slot.rs  sale_clock_auction.rs  seaport.rs  shardwallet.rs  simple_contract.rs  uniswap_permit2.rs  uniswap_v2_pair.rs  uniswap_v3_pool.rs  watchdog.rs
tests/common/: mod.rs
(+43 files in other folders)
